--- a/Frontend/src/pages/forum/Component/Posts/PostInfo.scss
+++ b/Frontend/src/pages/forum/Component/Posts/PostInfo.scss
@@ -70,7 +70,7 @@
   }
 
   .post-body {
-    text-align: justify;
+    // text-align: justify;
     word-wrap: break-word;
     overflow-wrap: break-word;
     white-space: pre-wrap;
