--- a/Frontend/src/pages/ProfileCard/TabComponent/ProjectComponent/DetailsPage/style.scss
+++ b/Frontend/src/pages/ProfileCard/TabComponent/ProjectComponent/DetailsPage/style.scss
@@ -699,7 +699,7 @@
   margin-top: 30px;
   font-size: 17px;
   width: 60vw;
-  letter-spacing: 0.6px;
+  letter-spacing: 0.7px;
 
   .Description-Title {
     font-size: 18px;
@@ -774,8 +774,9 @@
     display: none;
   }
   .description1 {
-    width: 97%;
-    font-size: 13px;
+    width: 99%;
+    font-size: 14px;
+    padding-left: 5px;
   }
   .mySwiper {
     width: 92vw;
