--- a/Frontend/src/pages/forum/postdetail.scss
+++ b/Frontend/src/pages/forum/postdetail.scss
@@ -176,4 +176,10 @@
   .sidebar-component {
     display: none;
   }
+  .post-detail-container {
+    padding: 3px;
+  }
+  .post-title {
+    font-size: 20px;
+  }
 }
