--- a/Frontend/src/components/carousel/newsCarousel.scss
+++ b/Frontend/src/components/carousel/newsCarousel.scss
@@ -69,7 +69,7 @@
       color: #fff;
       line-height: 1.4;
       display: -webkit-box;
-      -webkit-line-clamp: 2;
+      // -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       overflow: hidden;
     }
