Initial commit - Gamification system added

--- a/Frontend/src/components/Chart/gamification/GamificationDashboard.scss
+++ b/Frontend/src/components/Chart/gamification/GamificationDashboard.scss
@@ -162,3 +162,7 @@
     color: var(--white);
   }
 }
+.GamificationDashboard.content-container {
+  padding-top: 80px;  // header height
+  padding-bottom: 60px; // footer height
+}
