--- a/Frontend/src/pages/ProfileCard/TabComponent/ProjectComponent/DetailsPage/style.scss
+++ b/Frontend/src/pages/ProfileCard/TabComponent/ProjectComponent/DetailsPage/style.scss
@@ -891,3 +891,11 @@
     border-radius: 10px;
   }
 }
+.slide-loader {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #f4f4f4;
+}
