--- a/Frontend/src/pages/ProfileCard/TabComponent/ProjectComponent/DetailsPage/style.scss
+++ b/Frontend/src/pages/ProfileCard/TabComponent/ProjectComponent/DetailsPage/style.scss
@@ -1,6 +1,6 @@
 .detailsBanner {
   width: 100%;
-  background-color: var(--black);
+  // background-color: var(--black);
   // padding-top: 100px;
 }
 .title {
@@ -840,7 +840,7 @@
 }
 
 .tags-views-container {
-  display: flex;
+  // display: flex;
   align-items: center; /* Vertically center the items */
   gap: 12px; /* Add space between tags and views, but not too much */
   margin-top: 10px; /* Optional: Add some spacing from the above content */
