--- a/Frontend/src/components/Newsletter/newsletter.scss
+++ b/Frontend/src/components/Newsletter/newsletter.scss
@@ -134,11 +134,59 @@
 }
 
 @keyframes pulseGlow {
-  0%, 100% {
+  0%,
+  100% {
     box-shadow: 0 0 10px rgba(255, 87, 51, 0.2);
   }
   50% {
     box-shadow: 0 0 25px rgba(255, 87, 51, 0.3);
   }
 }
+/* ============================
+   RESPONSIVE DESIGN
+===============================*/
 
+/* Tablet & Medium Screens */
+@media (max-width: 768px) {
+  .newsletter {
+    width: 95%;
+    padding: 40px 25px;
+    flex-direction: column;
+    text-align: center;
+
+    .newsletter-left {
+      text-align: center;
+
+      h2 {
+        font-size: 1.6rem;
+      }
+
+      p {
+        font-size: 1rem;
+      }
+
+      form {
+        flex-direction: column;
+
+        input {
+          width: 100%;
+          padding: 10px 18px;
+        }
+
+        button {
+          width: 100%;
+          padding: 10px 18px;
+        }
+      }
+    }
+
+    .newsletter-right {
+      width: 100%;
+      margin-top: 15px;
+      text-align: left;
+    }
+    .newsletter-right ul li {
+      font-size: 0.9rem;
+    }
+  }
+}
