--- a/Frontend/src/pages/forum/style.scss
+++ b/Frontend/src/pages/forum/style.scss
@@ -17,17 +17,33 @@ body {
 }
 
 .header {
-  display: flex;
-  align-items: center;
   justify-content: space-between;
-  gap: 10px;
-  background-color: #1a1a1b;
-  width: 100%;
+  gap: 20px;
+
   padding: 6px 25px;
-  border-bottom: 1px solid #343536;
+
+  z-index: 1000;
+
   position: fixed;
   top: 0;
+  width: 100%;
+  height: 60px;
+
+  display: flex;
+  align-items: center;
+  transition: all ease 0.5s;
   z-index: 1000;
+  background: rgba(0, 0, 0, 0.5);
+  border-bottom: 0.1px solid #232323;
+  backdrop-filter: blur(4.5px);
+  -webkit-backdrop-filter: blur(4.5px);
+  box-shadow: 0 4px 15px rgba(255, 99, 71, 0.15);
+  transition: background 0.4s ease, box-shadow 0.4s ease;
+
+  &:hover {
+    background: rgba(15, 15, 15, 0.75);
+    box-shadow: 0 4px 25px rgba(255, 142, 53, 0.25);
+  }
 
   .header-logo {
     img {
@@ -40,17 +56,23 @@ body {
     gap: 20px;
     display: flex;
     align-items: center;
+    font-size: 15px;
     .nav-link {
       text-decoration: none;
-      color: #d7dadc;
-      font-weight: bold;
-      border: 1px solid rgb(69, 68, 68);
+
       padding: 5px 16px;
       border-radius: 20px; /* More rounded borders for a sleek look */
+      border: 0.1px solid darkslategray;
+      background: rgba(45, 54, 57, 0.95);
+      color: whitesmoke;
+      font-weight: 500;
+      transition: all 0.3s ease-in-out;
 
       &:hover {
-        background: #343536;
-        color: #0079d3;
+        background: linear-gradient(135deg, #ff8e35, #e50914);
+        border: 0.1px solid #ff8e35;
+        color: #fff;
+        box-shadow: 0 0 10px rgba(255, 142, 53, 0.5);
       }
     }
   }
@@ -73,10 +95,18 @@ body {
     }
 
     .profile-pic {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
+      width: 45px;
+      height: 45px;
       object-fit: cover;
+      border-radius: 50%;
+      border: 2px solid rgba(255, 142, 53, 0.4);
+      box-shadow: 0 0 10px rgba(255, 142, 53, 0.3);
+      cursor: pointer;
+      transition: 0.3s ease-in-out;
+
+      &:hover {
+        box-shadow: 0 0 15px rgba(255, 142, 53, 0.8);
+      }
     }
   }
 
