--- a/Frontend/src/pages/News/NewsDetail.scss
+++ b/Frontend/src/pages/News/NewsDetail.scss
@@ -203,19 +203,24 @@
     }
   }
   .delete-news-btn {
-  background: #d9534f;
-  color: white;
-  border: none;
-  padding: 10px 16px;
-  border-radius: 6px;
-  cursor: pointer;
-  font-weight: bold;
-  margin-bottom: 20px;
-  transition: 0.2s ease;
+    background: #d9534f;
+    color: white;
+    border: none;
+    padding: 10px 16px;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: bold;
+    margin-bottom: 20px;
+    transition: 0.2s ease;
 
-  &:hover {
-    background: #c9302c;
+    &:hover {
+      background: #c9302c;
+    }
   }
 }
 
+@media (min-width: 1280px) and (max-width: 1440px) {
+  .news-detail-layout .news-detail {
+    max-width: 790px;
+  }
 }
