--- a/Frontend/src/pages/News/NewsList.scss
+++ b/Frontend/src/pages/News/NewsList.scss
@@ -222,3 +222,9 @@
     font-size: 23px;
   }
 }
+
+@media (min-width: 1280px) and (max-width: 1440px) {
+  .news-layout .news-page {
+    max-width: 790px;
+  }
+}
