--- a/Frontend/src/pages/forum/Component/Header.scss
+++ b/Frontend/src/pages/forum/Component/Header.scss
@@ -373,3 +373,15 @@
   letter-spacing: 1px;
   text-shadow: 0 0 6px rgba(255, 142, 53, 0.8);
 }
+
+@media (max-width: 768px) {
+  .logo img {
+    width: 35px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1366px) {
+  .logo-text {
+    display: none;
+  }
+}
