--- a/Frontend/src/pages/forum/Component/right-sidebar/right-sidebar.scss
+++ b/Frontend/src/pages/forum/Component/right-sidebar/right-sidebar.scss
@@ -20,6 +20,17 @@
   }
 }
 
+@media (min-width: 1050px) and (max-width: 1200px) {
+  .curated-sidebar-container {
+    width: 290px;
+  }
+}
+
+@media (min-width: 1280px) and (max-width: 1440px) {
+  .curated-sidebar-container {
+    width: 300px;
+  }
+}
 /* Sidebar box container */
 .curated-sidebar-box {
   background: #272729;
@@ -181,5 +192,50 @@
       background: linear-gradient(90deg, #d93a00, #e85d04);
       transform: scale(1.05);
     }
+  }
+}
+
+// ---------------------------------------------skeleton css ---------------------------
+
+/* 🔥 SKELETON STYLES */
+.skeleton {
+  pointer-events: none;
+}
+
+.skeleton-box {
+  width: 48px;
+  height: 48px;
+  border-radius: 6px;
+  background: #2f2f2f;
+  animation: shimmer 1.6s infinite linear;
+}
+
+.skeleton-line {
+  height: 10px;
+  background: #2f2f2f;
+  border-radius: 4px;
+  margin-bottom: 6px;
+  animation: shimmer 1.6s infinite linear;
+
+  &.title {
+    width: 90%;
+    height: 12px;
+  }
+
+  &.meta {
+    width: 80%;
+  }
+
+  &.short {
+    width: 50%;
+  }
+}
+
+@keyframes shimmer {
+  0% {
+    background-position: -200px 0;
+  }
+  100% {
+    background-position: 200px 0;
   }
 }
