--- a/Frontend/src/pages/forum/postdetail.scss
+++ b/Frontend/src/pages/forum/postdetail.scss
@@ -8,6 +8,7 @@
   box-shadow: 0 6px 14px rgba(0, 0, 0, 0.25); /* Enhanced shadow for depth */
 
   /* Adapt for smaller screens */
+
   @media (max-width: 768px) {
     // padding: 15px;
   }
@@ -181,5 +182,11 @@
   }
   .post-title {
     font-size: 20px;
+  }
+}
+
+@media (min-width: 1280px) and (max-width: 1440px) {
+  .post-detail-container {
+    max-width: 590px;
   }
 }
