--- a/Frontend/src/pages/forum/style.scss
+++ b/Frontend/src/pages/forum/style.scss
@@ -60,7 +60,7 @@ body {
     .nav-link {
       text-decoration: none;
 
-      padding: 5px 16px;
+      padding: 4px 16px;
       border-radius: 20px; /* More rounded borders for a sleek look */
       border: 0.1px solid darkslategray;
       background: rgba(45, 54, 57, 0.95);
@@ -147,6 +147,7 @@ body {
       .nav-link {
         border: none;
         padding: 4px 5px;
+        background: none;
       }
     }
 
@@ -216,6 +217,17 @@ body {
   border-radius: 10px; /* Rounder borders */
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+}
+
+@media (min-width: 1280px) and (max-width: 1440px) {
+  .post-list {
+    max-width: 600px;
+  }
+}
+@media (min-width: 1050px) and (max-width: 1200px) {
+  .post-list {
+    max-width: 490px;
+  }
 }
 
 .post-wrapper {
