--- a/Frontend/src/pages/home/OurCreator/Ourcreator.scss
+++ b/Frontend/src/pages/home/OurCreator/Ourcreator.scss
@@ -3,7 +3,8 @@
   padding: 40px;
   border-radius: 12px;
   margin-bottom: 60px;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+  background: radial-gradient(circle at top left, #1b1b1b, #0c0c0c);
+  border: 2px solid rgba(255, 69, 0, 0.2);
   text-align: center;
   justify-content: center;
   align-items: center;
